Bug 117180 - REGRESSION (r151043): Frequent crashes inside WebPageProxy::getPlugInInformation
Summary: REGRESSION (r151043): Frequent crashes inside WebPageProxy::getPlugInInformation
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Mark Rowe (bdash)
URL:
Keywords: InRadar, Regression
Depends on:
Blocks:
 
Reported: 2013-06-03 23:27 PDT by Mark Rowe (bdash)
Modified: 2013-06-04 09:26 PDT (History)
3 users (show)

See Also:


Attachments
Patch v1 (2.10 KB, patch)
2013-06-03 23:34 PDT, Mark Rowe (bdash)
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Rowe (bdash) 2013-06-03 23:27:17 PDT
The code in WebPageProxy::getPlugInInformation has a null check to guard against plugInProcessProxy being null, but rather than returning it then continues on and dereferences plugInProcessProxy anyway.
Comment 1 Mark Rowe (bdash) 2013-06-03 23:34:27 PDT
Created attachment 203654 [details]
Patch v1
Comment 2 Radar WebKit Bug Importer 2013-06-04 08:32:13 PDT
<rdar://problem/14058552>
Comment 3 WebKit Commit Bot 2013-06-04 09:26:35 PDT
Comment on attachment 203654 [details]
Patch v1

Clearing flags on attachment: 203654

Committed r151172: <http://trac.webkit.org/changeset/151172>
Comment 4 WebKit Commit Bot 2013-06-04 09:26:37 PDT
All reviewed patches have been landed.  Closing bug.