REGRESSION (r151043): Frequent crashes inside WebPageProxy::getPlugInInformation <http://webkit.org/b/117180>

Reviewed by Brady Eidson.

* UIProcess/mac/WebPageProxyMac.mm:
(WebKit::WebPageProxy::getPlugInInformation): Return early when plugInProcessProxy is null
since there's nothing we can do.


Canonical link: https://commits.webkit.org/135454@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151172 268f45cc-cd09-0410-ab3c-d52691b4dbfc